--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext{
         kotlin_version = "1.3.72"
         coroutines_version = "1.3.9"
+        moxy_version = "2.1.2"
     }
     repositories {
         google()
