--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         kotlin_version = "1.3.72"
         coroutines_version = "1.3.9"
         moxy_version = "2.1.2"
+        retrofit_version = "2.9.0"
+        okhttp_version = "4.5.0"
     }
     repositories {
         google()
